Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <section class="main-content">
       <h2>
-<a id="welcome-to-my-personal-site" class="anchor" href="#welcome-to-my-personal-site" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal site,</h2>
+<a id="welcome-to-my-personal-site-hosted-on-github" class="anchor" href="#welcome-to-my-personal-site-hosted-on-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal site hosted on Github!</h2>
+
+<p>This will be my main landing page, for all my upcoming web dev portfolio! And so, stay tuned! It will go through changes from time to time!</p>
 
       <footer class="site-footer">
 
