Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@
       <h2>
 <a id="welcome-to-my-personal-site-hosted-on-github" class="anchor" href="#welcome-to-my-personal-site-hosted-on-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal site hosted on Github!</h2>
 
-<p>This will be my main landing page, for all my upcoming web dev portfolio! And so, stay tuned! It will go through changes from time to time!</p>
+<p>This will be my portfolio page, which will contain my work in web dev! I'm a beginner developer, and so I won't have some fancy site with all the cool animations and effects! I do however, have 4 below that I did as class projects(not too fancy, but the work of a newbie) :) !!</p>
+
+<ol>
+<li><a href="http://www.thomaskdesign.net/wats1020-dom-manipulation/">DOM Manipulation</a></li>
+<li><a href="http://www.thomaskdesign.net/wats1020-dom-basics/">DOM Basics</a></li>
+<li><a href="http://www.thomaskdesign.net/wats1020-validating-form-data/">Validating Form Data</a></li>
+<li><a href="http://www.thomaskdesign.net/wats1010-product-page/">Imaginary Online Store-Html and CSS </a></li>
+</ol>
+
+<p>And so, stay tuned! It will go through changes from time to time!</p>
+
+<p>Come visit again in the not-so-distant future, and maybe I'll have something much better to showcase by then!!</p>
+
+<p>© Thomas Kaiaua, 2016.</p>
 
       <footer class="site-footer">
 
