Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>Come visit again in the not-so-distant future, and maybe I'll have something much better to showcase by then!!</p>
 
-<p>© Thomas Kaiaua, 2016.</p>
+<p>© Thomas Kaiaua, 2016. Look me up on <a href="https://www.pinterest.com/ThomasKaiaua/">Pinterest</a> and <a href="https://twitter.com/ThomasKaiaua">Twitter</a>.</p>
 
       <footer class="site-footer">
 
