Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <h2>
 <a id="welcome-to-my-personal-site-hosted-on-github" class="anchor" href="#welcome-to-my-personal-site-hosted-on-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal site hosted on Github!</h2>
 
-<p>My name is Thomas Kaiaua and this is my portfolio page, which contains some if my work in web dev! I'm a beginner developer, and so I won't have some fancy site with all the cool animations and effects! I do however, have some below that I did as class projects(not too fancy, but the work of a newbie) :) !!</p>
+<p>My name is Thomas Kaiaua and this is my portfolio page, which contains some of my work in web dev! I'm a beginner developer, and so I won't have some fancy site with all the cool animations and effects, yet!! I do however, have some projects below(not too fancy, but the work of a newbie) :) !!</p>
 
 <ul>
 <li><a href="http://www.thomaskdesign.net/wats1020-dom-manipulation/">DOM Manipulation</a></li>
 <li><a href="http://www.thomaskdesign.net/wats1020-dom-basics/">DOM Basics</a></li>
 <li><a href="http://www.thomaskdesign.net/wats1020-validating-form-data/">Validating Form Data</a></li>
 <li><a href="http://www.thomaskdesign.net/wats1010-product-page/">Imaginary Online Store-Html and CSS </a></li>
-<li><a href="http://2048.thomaskdesign.net/">Static Website Deployment Using a Cloud Server </a></li>
+<li><a href="http://2048.thomaskdesign.net/">Static Website Deployment Using Apache Server </a></li>
 </ul>
 
 <p>And so, stay tuned! It will go through changes from time to time!</p>
