Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <div class="container">
       <section id="main_content">
         <h2>
-<a id="welcome-to-my-personal-site-hosted-on-github" class="anchor" href="#welcome-to-my-personal-site-hosted-on-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal site hosted on Github!</h2>
+<a id="hi-and-thank-you-for-stopping-by" class="anchor" href="#hi-and-thank-you-for-stopping-by" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi and thank you for stopping by!</h2>
 
-<p>My name is Thomas Kaiaua and this is my portfolio page, which contains some of my work in web dev! I'm a beginner developer, and so I won't have some fancy site with all the cool animations and effects, yet!! I do however, have some projects below(not too fancy, but the work of a newbie) :) !!</p>
+<p>My name is Thomas Kaiaua and this is just my portfolio page, which contains some of my work in web development! I'm a junior developer, and so I won't have some fancy site with all the bells and whistles, yet!! Below I have some projects I've done, or head over to GitHub for a more complete list or just <a href="https://github.com/ThomasKDesign?tab=repositories">click here!</a></p>
 
 <ul>
 <li><a href="http://www.thomaskdesign.net/wats1020-dom-manipulation/">DOM Manipulation</a></li>
